--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work-test</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media.css" />
 </head>
@@ -18,7 +19,12 @@
                     <div class="logo">
                         <img src="https://via.placeholder.com/50x50/O https://placeholder.com/" alt="logo" />
                     </div>
-                    <input class="search-bar" type="search" name="search-bar" id="search-bar" />
+                    <div class="search-container">
+                        <form action="">
+                            <input type="text" placeholder="Search.." name="search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                    </div>
                     <div class="icon">
                         <img class="icon__user" src="./img/person-circle.svg" alt="user-icon" />
                         <img class="icon__cart" src="./img/cart.svg" alt="cart-icon" />
