--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
                         </form>
                     </div>
                     <div class="icon">
-                        <img class="icon__user" src="./img/person-circle.svg" alt="user-icon" />
-                        <img class="icon__cart" src="./img/cart.svg" alt="cart-icon" />
+                        <a href="#" class="btn">
+                            <img class="icon__user" src="./img/person-circle.svg" alt="user-icon" />
+                        </a>
+                        <a href="#" class="btn">
+                            <img class="icon__cart" src="./img/cart.svg" alt="cart-icon" />
+                        </a>
                     </div>
                 </div>
             </div>
